--- a/Modulo 4/src/style.css
+++ b/Modulo 4/src/style.css
@@ -1,3 +1,31 @@
+.turno-display {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+#numero-turno {
+  font-size: 6rem;
+  color: #cb1313;
+  font-weight: bold;
+  margin: 0;
+}
+
+.texto-turno {
+  font-size: 1.7rem;
+  font-weight: bold;
+  margin: 0;
+  font-style: italic;
+  color: #1a1a1a;
+  text-align: center;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -80,7 +108,7 @@ button {
 }
 
 button:hover {
-  border-color: #646cff;
+  background-color: #ff6464;
 }
 
 button:focus,
@@ -101,29 +129,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
-
-.turno-display {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.numero-turno {
-  font-size: 6rem;
-  font-weight: bold;
-  margin: 0;
-}
-
-.texto-turno {
-  font-size: 2rem;
-  font-weight: bold;
-  margin: 0;
-  text-align: center;
 }
