--- a/Modulo 5/src/style.css
+++ b/Modulo 5/src/style.css
@@ -29,7 +29,8 @@ header {
   align-items: center;
   gap: 10px;
   padding: 10px;
-  padding-left: 30px;
+  border: 1px solid;
+  border-color: gray;
 }
 #bocaArriba {
   display: inline-flex;
