--- a/Modulo 11/estilos.css
+++ b/Modulo 11/estilos.css
@@ -74,3 +74,15 @@ h1 {
     text-decoration-color: black;
     text-decoration-style: wavy;
 }
+
+#numero-cuenta {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 17px;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: baseline;
+    margin-top: 10px;
+    margin-right: auto; 
+}
