--- a/Modulo 11/estilos.css
+++ b/Modulo 11/estilos.css
@@ -75,7 +75,7 @@ h1 {
     text-decoration-style: wavy;
 }
 
-#numero-cuenta {
+#datos-cuenta {
     display: flex;
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
